--- a/tensorrt_0.7.1_aot_chatglm3_6B_32K.ipynb
+++ b/tensorrt_0.7.1_aot_chatglm3_6B_32K.ipynb
@@ -5,7 +5,7 @@
    "id": "6c518e46-1464-4cc9-83ca-d992364ae438",
    "metadata": {},
    "source": [
-    "# AOT 方式使用 Tensorrt-LMI 部署Baichuan2-13B"
+    "# AOT 方式使用 Tensorrt-LMI 部署 Chatglm3-6b-32"
    ]
   },
   {
