remove duplicate option.model_id

--- a/tensorrt_0.7.1_aot_chatglm3_6B_32K.ipynb
+++ b/tensorrt_0.7.1_aot_chatglm3_6B_32K.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "%%writefile serving.properties\n",
-    "option.model_id=option.model_id=THUDM/chatglm3-6b-32k\n",
+    "option.model_id=THUDM/chatglm3-6b-32k\n",
     "option.tensor_parallel_degree=2\n",
     "option.max_rolling_batch_size=64\n",
     "option.dtype=fp16\n",
