Align input format

--- a/tensorrt_0.7.1_aot_baichuan2_13B.ipynb
+++ b/tensorrt_0.7.1_aot_baichuan2_13B.ipynb
@@ -120,7 +120,13 @@
    },
    "outputs": [],
    "source": [
-    "MODEL_REPO_DIR=\"./output/baichuan_v2_13B_aot2\"\n",
+    "# MODEL_REPO_DIR=\"./output/baichuan_v2_13B_aot2\"\n",
+    "# !mkdir -p $MODEL_REPO_DIR\n",
+    "# !mv serving.properties $MODEL_REPO_DIR\n",
+    "\n",
+    "\n",
+    "file_name = \"baichuan_v2_13B_aot2\"\n",
+    "MODEL_REPO_DIR=f\"output/{file_name}\"\n",
     "!mkdir -p $MODEL_REPO_DIR\n",
     "!mv serving.properties $MODEL_REPO_DIR"
    ]
@@ -135,7 +141,7 @@
    "outputs": [],
    "source": [
     "bucket=\"llm-trt\"\n",
-    "s3_model_prefix = \"lmi/baichuan_v2_13B_aot_2p_2_64\"\n",
+    "s3_model_prefix = f\"lmi/{file_name}\"\n",
     "s3url=f\"s3://{bucket}/{s3_model_prefix}\"\n",
     "s3url"
    ]
@@ -155,14 +161,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5c2061-96ac-4f8f-b252-d5935c2f9b4f",
+   "id": "ad588e93-7613-416f-a01e-2104473f96f0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "current_path = Path.cwd()\n",
+    "trt_model_path = Path(current_path, MODEL_REPO_DIR)\n",
+    "print(trt_model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa5c2061-96ac-4f8f-b252-d5935c2f9b4f",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "!docker run --runtime=nvidia --gpus all --shm-size 12gb \\\n",
-    "-v /home/ec2-user/SageMaker/output/baichuan_v2_13B_aot2:/tmp/trtllm \\\n",
+    "-v $trt_model_path:/tmp/trtllm \\\n",
     "-p 8080:8080 \\\n",
     "public.ecr.aws/s0w3f1p2/tensorrt-lmi-xq:v1 /opt/djl/partition/trt_llm_partition.py \\\n",
     "--properties_dir /tmp/trtllm \\\n",
@@ -187,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "!aws s3 sync /home/ec2-user/SageMaker/output/baichuan_v2_13B_aot2 $s3url"
+    "!aws s3 sync $trt_model_path $s3url"
    ]
   },
   {
@@ -209,14 +234,23 @@
    },
    "outputs": [],
    "source": [
-    "%%writefile serving.properties\n",
-    "option.model_id=s3://llm-trt/lmi/baichuan_v2_13B_aot_2p_2_64\n",
-    "option.tensor_parallel_degree=2\n",
-    "option.max_rolling_batch_size=64\n",
-    "option.dtype=fp16\n",
-    "option.rolling_batch=trtllm\n",
-    "option.baichuan_model_version=v2_13b\n",
-    "option.trust_remote_code=True"
+    "# %%writefile serving.properties\n",
+    "# option.model_id=s3://llm-trt/lmi/baichuan_v2_13B_aot_2p_2_64\n",
+    "# option.tensor_parallel_degree=2\n",
+    "# option.max_rolling_batch_size=64\n",
+    "# option.dtype=fp16\n",
+    "# option.rolling_batch=trtllm\n",
+    "# option.baichuan_model_version=v2_13b\n",
+    "# option.trust_remote_code=True\n",
+    "\n",
+    "with open('serving.properties', 'w') as f:\n",
+    "    f.write(f\"option.model_id={s3url}\\n\")\n",
+    "    f.write(\"option.tensor_parallel_degree=2\\n\")\n",
+    "    f.write(\"option.max_rolling_batch_size=64\\n\")\n",
+    "    f.write(\"option.dtype=fp16\\n\")\n",
+    "    f.write(\"option.trust_remote_code=True\\n\")\n",
+    "    f.write(\"option.rolling_batch=trtllm\\n\")\n",
+    "    f.write(\"option.baichuan_model_version=v2_13b\\n\")"
    ]
   },
   {
@@ -352,7 +386,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "744579de-f8fa-450a-89a1-329e84e067bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "s3_code_prefix = \"large-model-lmi/baichuan-v2-13B-aot-code\"\n",
