--- a/tensorrt_0.7.1_aot_chatglm3_6B_32K.ipynb
+++ b/tensorrt_0.7.1_aot_chatglm3_6B_32K.ipynb
@@ -157,7 +157,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "de059920",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -171,6 +173,10 @@
    "execution_count": null,
    "id": "aa5c2061-96ac-4f8f-b252-d5935c2f9b4f",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -188,7 +194,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c57ec1d0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!mv ./model_tokenizer/chatglm3_6B_32K_tokenizer_config.json $trt_model_path/tokenizer_config.json"
@@ -248,7 +256,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd2cb0af",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!cat serving.properties"
@@ -274,7 +284,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "744579de-f8fa-450a-89a1-329e84e067bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "s3_code_prefix = f\"large-model-lmi/{file_name}\"\n",
@@ -358,6 +370,10 @@
    "execution_count": null,
    "id": "32e86063-b6d3-42c2-9da9-f43d4a6b5ae2",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
