--- a/tensorrt_0.7.1_aot_qwen7B.ipynb
+++ b/tensorrt_0.7.1_aot_qwen7B.ipynb
@@ -239,7 +239,7 @@
    "source": [
     "%%sh\n",
     "mkdir mymodel\n",
-    "mv serving.properties model.py mymodel/\n",
+    "mv serving.properties  mymodel/\n",
     "tar czvf mymodel.tar.gz mymodel/\n",
     "rm -rf mymodel"
    ]
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "input_text = \"世界上第二高的山峰是哪座\"\n",
-    "\n",
+    "input_text = f\"<|im_start|>system\\nYou are a helpful assistant.<|im_end|>\\n<|im_start|>user\\n{input_text}<|im_end|>\\n<|im_start|>assistant\\n\"\n",
     "response = predictor.predict(\n",
     "    {\"inputs\": f\"{input_text}\", \n",
     "     \"parameters\": {\n",
