--- a/tensorrt_0.7.1_aot_qwen7B_chat.ipynb
+++ b/tensorrt_0.7.1_aot_qwen7B_chat.ipynb
@@ -114,7 +114,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db08ccfa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "file_name = \"qwen_7B_chat_aot\"\n",
@@ -142,7 +144,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "53003723",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -231,6 +235,119 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6337b665-38dc-4466-a901-3996e92e5767",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile model.py\n",
+    "from djl_python.tensorrt_llm import TRTLLMService\n",
+    "from djl_python.inputs import Input\n",
+    "from djl_python.outputs import Output\n",
+    "from djl_python.encode_decode import encode, decode\n",
+    "import logging\n",
+    "import json\n",
+    "import types\n",
+    "import re\n",
+    "\n",
+    "_service = TRTLLMService()\n",
+    "\n",
+    "def custom_output_formatter(token, first_token, last_token, details, generated_tokens):\n",
+    "    \"\"\"\n",
+    "    Replace this function with your custom output formatter.\n",
+    "    \n",
+    "    Args:\n",
+    "        token (Token): Token object \n",
+    "        first (bool): If first token \n",
+    "        last (bool): If last token\n",
+    "        aux (dict): Miscellaneous information\n",
+    "        prev_response (str): Previously generated tokens\n",
+    "\n",
+    "    Returns:\n",
+    "        (str): Response string\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    result = {\"token_id\": token.id, \"token_text\": token.text, \"token_log_prob\": token.log_prob, \"token_special_token\": token.special_token}\n",
+    "    final_response = \"\" \n",
+    "    if last_token:\n",
+    "        # result[\"generated_text\"] = generated_tokens\n",
+    "        final_response = re.sub(\"<\\|im_end\\|>\\n<\\|endoftext\\|>$\", \"\", generated_tokens) \n",
+    "        if details:\n",
+    "            result[\"details\"] = {\n",
+    "                \"finish_reason\": details.get(\"finish_reason\", None)\n",
+    "            }\n",
+    "    \n",
+    "    #return json.dumps(result, ensure_ascii=False) + \"\\n\"\n",
+    "    return final_response\n",
+    "\n",
+    "def custom_input_formatter(self, inputs):\n",
+    "    \"\"\"\n",
+    "    Replace this function with your custom input formatter.\n",
+    "        \n",
+    "    Args:\n",
+    "        data (obj): The request data, dict or string  \n",
+    "\n",
+    "    Returns:\n",
+    "        (tuple): input_data (list), input_size (list), parameters (dict), errors (dict), batch (list)\n",
+    "    \"\"\"\n",
+    "    input_data = []\n",
+    "    input_size = []\n",
+    "    parameters = []\n",
+    "    errors = {}\n",
+    "    batch = inputs.get_batches()\n",
+    "    for i, item in enumerate(batch):\n",
+    "        try:\n",
+    "            content_type = item.get_property(\"Content-Type\")\n",
+    "            input_map = decode(item, content_type)\n",
+    "        except Exception as e:  # pylint: disable=broad-except\n",
+    "            logging.warning(f\"Parse input failed: {i}\")\n",
+    "            input_size.append(0)\n",
+    "            errors[i] = str(e)\n",
+    "            continue\n",
+    "\n",
+    "        _inputs = input_map.pop(\"inputs\", input_map)\n",
+    "        print(f\"Dongxq self model.py _inputs: {_inputs}\")\n",
+    "        if not isinstance(_inputs, list):\n",
+    "            _inputs = [_inputs]\n",
+    "        _inputs=list(map(lambda x:  f\"<|im_start|>system\\nYou are a helpful assistant.<|im_end|>\\n<|im_start|>user\\n{x}<|im_end|>\\n<|im_start|>assistant\\n\", _inputs))\n",
+    "        input_data.extend(_inputs)\n",
+    "        input_size.append(len(_inputs))\n",
+    "\n",
+    "        _param = input_map.pop(\"parameters\", {})\n",
+    "        if \"cached_prompt\" in input_map:\n",
+    "            _param[\"cached_prompt\"] = input_map.pop(\"cached_prompt\")\n",
+    "        if not \"seed\" in _param:\n",
+    "            # set server provided seed if seed is not part of request\n",
+    "            if item.contains_key(\"seed\"):\n",
+    "                _param[\"seed\"] = item.get_as_string(key=\"seed\")\n",
+    "        for _ in range(input_size[i]):\n",
+    "            parameters.append(_param)\n",
+    "\n",
+    "    return input_data, input_size, parameters, errors, batch\n",
+    "\n",
+    "def handle(inputs: Input):\n",
+    "    \"\"\"\n",
+    "    Default handler function\n",
+    "    \"\"\"\n",
+    "    if not _service.initialized:\n",
+    "        # stateful model\n",
+    "        props = inputs.get_properties()\n",
+    "        print(f\"props: {props}\")\n",
+    "        props['output_formatter'] = custom_output_formatter\n",
+    "        _service.initialize(props)\n",
+    "        _service.parse_input = types.MethodType(custom_input_formatter, _service)\n",
+    "\n",
+    "    if inputs.is_empty():\n",
+    "        # initialization request\n",
+    "        return None\n",
+    "\n",
+    "    return _service.inference(inputs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9b6d70a2-b5dc-4b98-9627-6993c1dba267",
    "metadata": {
     "tags": []
@@ -248,7 +365,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "744579de-f8fa-450a-89a1-329e84e067bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "s3_code_prefix = f\"large-model-lmi/{file_name}\"\n",
@@ -303,7 +422,7 @@
    "outputs": [],
    "source": [
     "instance_type = \"ml.g5.12xlarge\"\n",
-    "endpoint_name = sagemaker.utils.name_from_base(\"qwen-7B-aot\")\n",
+    "endpoint_name = sagemaker.utils.name_from_base(\"qwen-7B-chat-aot\")\n",
     "\n",
     "model.deploy(initial_instance_count=1,\n",
     "             instance_type=instance_type,\n",
@@ -338,14 +457,15 @@
    },
    "outputs": [],
    "source": [
-    "input_text = \"世界上第二高的山峰是哪座\"\n",
+    "input_text = \"世界上第二高的山峰是哪座?\"\n",
     "\n",
     "response = predictor.predict(\n",
-    "    {\"inputs\": f\"{input_text}\", \n",
+    "    {\"inputs\": f\"{input_text}\",\n",
     "     \"parameters\": {\n",
     "             \"max_new_tokens\":128,\n",
     "              \"top_k\": 0,\n",
-    "              \"top_p\": 0.8\n",
+    "              \"top_p\": 0.8,\n",
+    "              \"end_id\": [151644, 151645]\n",
     "         }\n",
     "    }\n",
     ")\n",
