--- a/vllm_rollingbatch_deploy_Mixtral-8x7B-DPO-AWQ.ipynb
+++ b/vllm_rollingbatch_deploy_Mixtral-8x7B-DPO-AWQ.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "271ce0b4-e9b2-4661-9767-7580ff6f86be",
    "metadata": {
     "collapsed": true,
@@ -62,56 +62,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting transformers\n",
-      "  Downloading transformers-4.38.2-py3-none-any.whl.metadata (130 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.7/130.7 kB\u001b[0m \u001b[31m11.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting sentencepiece\n",
-      "  Downloading sentencepiece-0.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (7.7 kB)\n",
-      "Requirement already satisfied: filelock in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from transformers) (3.13.1)\n",
-      "Collecting huggingface-hub<1.0,>=0.19.3 (from transformers)\n",
-      "  Downloading huggingface_hub-0.21.4-py3-none-any.whl.metadata (13 kB)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from transformers) (1.26.3)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from transformers) (21.3)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from transformers) (6.0.1)\n",
-      "Collecting regex!=2019.12.17 (from transformers)\n",
-      "  Downloading regex-2023.12.25-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.9/40.9 kB\u001b[0m \u001b[31m760.0 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: requests in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from transformers) (2.31.0)\n",
-      "Collecting tokenizers<0.19,>=0.14 (from transformers)\n",
-      "  Downloading tokenizers-0.15.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.7 kB)\n",
-      "Collecting safetensors>=0.4.1 (from transformers)\n",
-      "  Downloading safetensors-0.4.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from transformers) (4.66.1)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2023.12.2)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.9.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from packaging>=20.0->transformers) (3.1.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from requests->transformers) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from requests->transformers) (1.26.18)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages (from requests->transformers) (2023.11.17)\n",
-      "Downloading transformers-4.38.2-py3-none-any.whl (8.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m46.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading sentencepiece-0.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m30.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading huggingface_hub-0.21.4-py3-none-any.whl (346 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m346.4/346.4 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading regex-2023.12.25-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (773 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m774.0/774.0 kB\u001b[0m \u001b[31m15.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading safetensors-0.4.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m11.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading tokenizers-0.15.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.6/3.6 MB\u001b[0m \u001b[31m36.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: sentencepiece, safetensors, regex, huggingface-hub, tokenizers, transformers\n",
-      "Successfully installed huggingface-hub-0.21.4 regex-2023.12.25 safetensors-0.4.2 sentencepiece-0.2.0 tokenizers-0.15.2 transformers-4.38.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install transformers sentencepiece --upgrade  --quiet"
    ]
@@ -251,20 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "f903af58",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S3 Code or Model tar ball uploaded to --- > s3://sagemaker-us-east-1-596899493901/large-model-vllm/TheBloke/Nous-Hermes-2-Mixtral-8x7B-DPO-AWQcode/mymodel.tar.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_name = \"TheBloke/Nous-Hermes-2-Mixtral-8x7B-DPO-AWQ\"\n",
     "s3_code_prefix = f\"large-model-vllm/{model_name}code\"\n",
@@ -285,22 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8f27a8df",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "endpoint_name: lmi-model-TheBloke-Nous-Hermes-2-Mixtra-2024-03-21-03-25-49-158\n",
-      "---------------!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "instance_type = \"ml.g4dn.12xlarge\"\n",
     "endpoint_name = sagemaker.utils.name_from_base(f\"lmi-model-{model_name.replace('/', '-')}\")\n",
@@ -339,6 +273,7 @@
    "source": [
     "system_message=\"\"\n",
     "input_text = \"请解释一下AI\"\n",
+    "\n",
     "prompt_template=f'''<|im_start|>system\n",
     "{system_message}<|im_end|>\n",
     "<|im_start|>user\n",
@@ -349,7 +284,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
+   "id": "e426ba55-6cc3-4772-be77-0f99f29128e5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "parameters = {\n",
+    "                \"max_new_tokens\":128,\n",
+    "                \"do_sample\":True,\n",
+    "                \"temperature\":0.7,\n",
+    "                \"top_p\":0.95,\n",
+    "                \"top_k\":40,\n",
+    "                \"repetition_penalty\":1.1\n",
+    "            }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a450b46-8783-41b3-b2f4-1b1bb05e8613",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## None Streaming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "ccbf0046",
    "metadata": {
     "tags": []
@@ -359,17 +323,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.4 ms, sys: 0 ns, total: 15.4 ms\n",
-      "Wall time: 6.5 s\n"
+      "CPU times: user 10.5 ms, sys: 4.19 ms, total: 14.7 ms\n",
+      "Wall time: 6.42 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'{\"generated_text\": \"AI，全称为人工智能（Artificial Intelligence），是指计算机系统通过学习、推理和自我改进的能力模拟人类智能行为和思维过程。这意味着它可以执行复杂的任务并从经验中学习并提高其性能。AI主要分为强AI（AGI，Artificial General Intelligence）和弱AI（ANI，Artificial Narrow Intelligence）两大类别。弱AI具有特定领域或特定\"}'"
+       "'{\"generated_text\": \"AI，全称为人工智能（Artificial Intelligence），是指计算机系统通过学习、自我优化和模拟人类思维方式来执行复杂任务的技术。AI可以从数据中学习并生成预测或决策，以实现各种应用场景，例如图像识别、语音合成、自然语言处理等。AI的主要目标是使计算机系统能够进行类似于人类智能的行动，包括\"}'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,18 +343,117 @@
     "response = predictor.predict(\n",
     "    {\n",
     "        \"inputs\": prompt_template, \n",
-    "         \"parameters\": {\n",
-    "            \"max_new_tokens\":128,\n",
-    "            \"do_sample\":True,\n",
-    "            \"temperature\":0.7,\n",
-    "            \"top_p\":0.95,\n",
-    "            \"top_k\":40,\n",
-    "            \"repetition_penalty\":1.1\n",
-    "            }\n",
+    "         \"parameters\": parameters\n",
     "    }\n",
     ")\n",
     "text = str(response, 'utf-8')\n",
     "text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c7d0b5-5ddb-40b3-848d-ce058b1a4b9e",
+   "metadata": {},
+   "source": [
+    "## Streaming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "62229879-28d2-4ecc-b0cf-c366317e7823",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import boto3\n",
+    "\n",
+    "smr_client = boto3.client(\"sagemaker-runtime\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "533c5232-3764-47fe-b8fb-cb95b4a16d71",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_realtime_response_stream(sagemaker_runtime, endpoint_name, payload):\n",
+    "    response_stream = sagemaker_runtime.invoke_endpoint_with_response_stream(\n",
+    "        EndpointName=endpoint_name,\n",
+    "        Body=json.dumps(payload), \n",
+    "        ContentType=\"application/json\",\n",
+    "        CustomAttributes='accept_eula=false'\n",
+    "    )\n",
+    "    return response_stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "30f4d2e2-fa5b-4e13-925d-6c8bd41958ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "payload = {\n",
+    "    \"inputs\":  prompt_template,\n",
+    "    \"parameters\": parameters,\n",
+    "    \"stream\": True ## <-- to have response stream.\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e289afdd-a048-40a1-be33-8a6628d6dc05",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from utils.LineIterator import LineIterator\n",
+    "\n",
+    "def print_response_stream(response_stream):\n",
+    "    event_stream = response_stream.get('Body')\n",
+    "    for line in LineIterator(event_stream):\n",
+    "        print(line, end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "335da0ec-7f78-4815-981c-2294ad466e69",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI，全称为人工智能（Artificial Intelligence），是一个广泛的研究领域和技术实践。它涉及在计算机系统中模拟、扩展和创造智能行为和决策能力。\n",
+      "\n",
+      "AI的目标是使计算机系统能够像人类一样学习、理解、推理和进行决策。这意味着AI可以处理复杂的任务、自动化过程、提高效率和降低成本"
+     ]
+    }
+   ],
+   "source": [
+    "response_stream = get_realtime_response_stream(smr_client, endpoint_name, payload)\n",
+    "print_response_stream(response_stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ad8352a-7eec-461d-b161-765a8a7220ba",
+   "metadata": {},
+   "source": [
+    "## Clear resources"
    ]
   },
   {
@@ -406,14 +469,6 @@
     "sess.delete_endpoint_config(endpoint_name)\n",
     "model.delete_model()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa457daf-c1cd-4679-9d0f-daf0d008e787",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
