--- a/vllm_deploy_qwen1.5_72B_chat_AWQ.ipynb
+++ b/vllm_deploy_qwen1.5_72B_chat_AWQ.ipynb
@@ -5,7 +5,7 @@
    "id": "71a329f0",
    "metadata": {},
    "source": [
-    "# vLLM Qwen1.5-72B-chat vLLM deployment guide\n",
+    "# vLLM Qwen1.5-72B-Chat-AWQ vLLM deployment guide\n",
     "In this tutorial, you will use LMI container from DLC to SageMaker and run inference with it.\n",
     "\n",
     "Please make sure the following permission granted before running the notebook:\n",
@@ -25,7 +25,8 @@
    },
    "outputs": [],
    "source": [
-    "%pip install sagemaker --upgrade  --quiet"
+    "%pip install sagemaker --upgrade  --quiet\n",
+    "%pip install boto3==1.34.101"
    ]
   },
   {
