--- a/vllm_deploy_qwen1.5_110B_chat_AWQ.ipynb
+++ b/vllm_deploy_qwen1.5_110B_chat_AWQ.ipynb
@@ -483,28 +483,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "c16918d8-35d9-4b56-ad50-73f7ab858a1e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "你是一个经验丰富的医疗方面文章的信息抽取专家，你可以从一篇网页中抽取出谭鹏程医生的姓名，性别，医院，科室，职称，学术头衔，行政职务\n",
-      "\n",
-      "输出的格式为: \n",
-      "{'姓名': 'XX', '医院': 'xx', '性别': 'XX', '科室': 'XX', '职称': 'XX', '学术头衔': 'XX', '行政职务': 'XX'} \n",
-      "如果在网页信息中没有发现谭鹏程医生的任何信息, 输出的内容为: {'姓名': 查无此人, '医院': '查无此人', '性别': '查无此人', '科室': '查无此人', '职称': '查无此人', '学术头衔': '查无此人', '行政职务': '查无此人'}\n",
-      "如果在网页信息中只包括谭鹏程医生的部分信息，在输出的对应字段后面输出\"未知\"\n",
-      "不要输出任何其他内容，不要输出推理过程\n",
-      "请提取谭鹏程医生的相关信息，包含谭鹏程医生的网页信息如下: \n",
-      "内科系统-烟台市中医医院官方网站ENGLISH中文版专家介绍◌创伤显微外科、手足外科◌中医药预防保健中心◌莱山区扶正堂门诊部◌开发区扶正堂门诊部难治性肠癌、难治耐药性肿瘤、难治性肝胆胰恶性肿瘤的微创介入治疗及各实体肿瘤中西医结合综合治疗擅长中西医治疗各系统恶性肿瘤，如结直肠癌、胃癌、肺癌、乳腺癌、肝胆肿瘤、胰腺癌、前列腺癌、卵巢癌、子宫内膜癌、宫颈癌、小细胞癌、肉瘤等。尤擅长将特色中医和现代医学有机结合，中西医结合治疗肿瘤的不同阶段，针对肿瘤的癌前病变、术后促恢复、防复发转移、联合西医减毒增效、晚期肿瘤患者长期带瘤生存、提高生活质量、延长生存期等方面疗效显著。擅长肺癌、胃癌、结直肠癌、肝癌、乳腺癌、卵巢癌、胰腺癌等各系统恶性肿瘤的中西医结合诊疗及肿瘤的精准穿刺活检与介入治疗。临证诊疗中，秉承中西医结合优势互补原则，通过中医药与其他治癌手段综合有序的配合，以达到中西医结合防治肿瘤复发转移，增加放化疗、靶向治疗、免疫治疗等的疗效、减轻其毒性，延长生存期，提高生活质量的目的。擅于中西医结合治疗消化系统肿瘤、泌尿系统肿瘤、乳腺肿瘤、呼吸道肿瘤。善于中医药治疗临床常见病、多发病。在中医药配合手术、放化疗、靶向治疗等减毒增效、预防复发转移及中医药治疗晚期恶性肿瘤方面具有丰富的经验。擅长胃癌、肺癌、食管癌、肝癌、肠癌、乳腺癌、妇科肿瘤等的中西医结合治疗，尤其擅长以中医中药治疗化疗药物、靶向药物、免疫药物等抗肿瘤药物产生的各类不良反应。坚持中西医结合理念，擅长肺癌、胃癌、肝癌、肠癌、乳腺癌等各系统肿瘤的内科治疗及介入微创治疗，善于运用传统中医疗法改善肿瘤患者在治疗中的不良反应。擅长中西医结合治疗各种实体性肿瘤，如肺癌、乳腺癌、胃肠肿瘤、肾癌、膀胱癌、头颈部肿瘤、肝胆胰肿瘤及妇科肿瘤等恶性肿瘤的治疗，尤其精通中医辩证治癌、体质调理防癌及综合运用精准穿刺活检、肿瘤消融、介入治疗等微创诊疗技术。擅长胃癌、肺癌，食管癌、头颈部肿瘤，肝癌、乳腺癌、妇科肿瘤等各系统恶性肿瘤的中西医结合诊治，在中晚期胃癌疗效突出，研发胃癌一号，二号方，和系列外用方，三B期胃癌活过五年很多。运用中医药让晚期肿瘤病人长期带瘤生存，对肿瘤病人的消化不良，贫血，疲乏，疼痛，头晕等相关有很好的治疗效果。恰当应用化疗、靶向、免疫等现代西医治疗方法，处理好不良反应，精准治疗效果达到最佳。擅于中西医结合、中医内外治法相结合治疗呼吸系统肿瘤、消化系统肿瘤、妇科肿瘤、肝胆肿瘤，泌尿系统肿瘤等，并善用“中医三维立体疗法”治疗癌性胸腹水、癌性疼痛、癌性疲乏等肿瘤并发症，及防治术后、放化疗、靶向及免疫相关不良反应等。擅长头颈部癌、肺癌、胃癌、肠癌、肝癌、乳腺癌、妇科肿瘤、胰腺癌、前列腺癌、淋巴瘤等各系统恶性肿瘤的化疗、内分泌治疗、靶向治疗、免疫治疗、中药治疗，掌握在最适当的时机给予中西药治疗的结合，能够取得事半功倍的效果。擅长运用中医药的方法治疗放疗、化疗、靶向、免疫治疗引起的不良反应，擅长各系统良恶性肿瘤的穿刺活检技术、微波消融及化学消融术、放射性粒子植入术。擅长中西医结合治疗肺癌及消化道肿瘤擅长中西医结合治疗肺癌及乳腺癌等内科癌病，熟练掌握B超引导下的各种穿刺活检及肿瘤局部微创治疗技术。擅长中西医结合治疗消化道恶性肿瘤及血液系统相关疾病擅长利用中医经方治疗各系统恶性肿瘤的引起的痛疼，失眠，乏力，食欲减退，气短等各种临床症状及中西医结合治疗肿瘤，治疗因放化疗，靶向及免疫治疗引起的各种不良反应。擅长肺癌的规范化治疗熟练掌握常见肿瘤的诊治，如肺癌、胃癌、结直肠癌、乳腺癌、肝癌等，擅长中西医结合肿瘤的诊治和预防，及肿瘤治疗相关并发症的处理。熟练掌握常见肿瘤的诊治，如肺癌、胃癌、结肠癌、乳腺癌等，擅长中西医结合肿瘤的诊治和预防。擅长肺癌、乳腺癌、妇科肿瘤、消化系统肿瘤等瘤肿的中西医结合治疗，对中医治疗手术后及放化疗后的毒性反应颇有心得。尤其专攻肺癌的综合治疗以及肝癌介入消融及中医综合治疗。并擅长肝癌血管介入、各部位肿瘤穿刺活检技术、肿瘤的微波、化学、冷冻消融术、放射性粒子植入术、经皮肝穿刺胆道引流术等局部诊疗技术。中医内科学硕士，擅长运用《伤寒论》、《金匮要略》等中医经典方剂治疗临床常见病、多发病，尤其在运用中医经典方剂和中医扶正法治疗恶性肿瘤和西医手术、放化疗、靶向治疗等常见不良反应方面较有心得。--卫生统计局网站--烟台市企事业单位公开信息网站总服务台咨询电话：0535-6597085急救电话：0535-6597120总院地址：山东省烟台市幸福路39号  乘车路线：乘2路，16路，26路，37路，42路，48路，70路，80路，82路直达©COPYRIGHT烟台市中医医院 | SEO标签 营业执照京ICP备10002622号-38鲁公网安备37060202000379号右侧在线客服组件SAFCoolestv1.2设置面板ZRSSS-ATQH-IAAFE-ZFSSorry，当前栏目暂无内容！您可以查看其他栏目或返回 首页SVG图标库请自行添加图标，用div包起来，并命名使用\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 设定医生和信息\n",
     "doctorName = \"谭鹏程\"\n",
@@ -516,13 +500,7 @@
     "# 尝试将内容解码为UTF-8编码的字符串\n",
     "pageContent = content.encode('utf-8').decode('utf-8')\n",
     "\n",
-    "prompt = f\"你是一个经验丰富的医疗方面文章的信息抽取专家，你可以从一篇网页中抽取出{doctorName}医生的姓名，性别，医院，科室，职称，学术头衔，行政职务\\n\"\n",
-    "prompt += \"\\n输出的格式为: \\n{'姓名': 'XX', '医院': 'xx', '性别': 'XX', '科室': 'XX', '职称': 'XX', '学术头衔': 'XX', '行政职务': 'XX'} \"\n",
-    "prompt += f\"\\n如果在网页信息中没有发现{doctorName}医生的任何信息, \"\n",
-    "prompt += \"输出的内容为: {'姓名': 查无此人, '医院': '查无此人', '性别': '查无此人', '科室': '查无此人', '职称': '查无此人', '学术头衔': '查无此人', '行政职务': '查无此人'}\"\n",
-    "prompt += f\"\\n如果在网页信息中只包括{doctorName}医生的部分信息，在输出的对应字段后面输出\\\"未知\\\"\"\n",
-    "prompt += \"\\n不要输出任何其他内容，不要输出推理过程\"\n",
-    "prompt += f\"\\n请提取{doctorName}医生的相关信息，包含{doctorName}医生的网页信息如下: \\n\"\n",
+    "prompt = f\"这里写prompt\"\n",
     "prompt += pageContent\n",
     "\n",
     "\n",
