--- a/vllm_deploy_qwen1.5_110B_chat_AWQ.ipynb
+++ b/vllm_deploy_qwen1.5_110B_chat_AWQ.ipynb
@@ -490,9 +490,9 @@
    },
    "outputs": [],
    "source": [
-    "# 设定医生和信息\n",
-    "doctorName = \"谭鹏程\"\n",
-    "filePath = './信达HCPDCR-20240122-021-2.txt'\n",
+    "\n",
+    "doctorName = \"\"\n",
+    "filePath = './xx.txt'\n",
     "with open(filePath, 'r', encoding='utf-8') as file:\n",
     "    # 读取文件内容\n",
     "    content = file.read()\n",
